--- a/client/src/app/components/view-test-status/view-test-status.component.css
+++ b/client/src/app/components/view-test-status/view-test-status.component.css
@@ -6,5 +6,57 @@
 }
 
 table {
-    width: 60vw;
+    width: 70vw;
 }
+
+.th-center{
+    text-align: center;
+}
+.th-left{
+    text-align: left;
+}
+.th-right{
+    text-align: right;
+}
+
+.w-15 {
+    width: 15%;
+}
+
+.w-10 {
+    width: 10%;
+}
+
+.w-20 {
+    width: 20%;
+}
+
+.w-30 {
+    width: 30%;
+}
+
+.pending {
+    color: rgb(255, 81, 0);
+}
+
+.rejected {
+    color: darkgreen;
+}
+
+.assigned {
+    color: blue;
+}
+
+.booked {
+    color: darkmagenta
+}
+
+.legend {
+    font-weight: 550;
+    display: inline-block;
+    min-width: 15em;
+}
+
+li:not(:last-child) { 
+    margin-bottom: 1em;  
+ }
